--- a/clixel/CMakeLists.txt
+++ b/clixel/CMakeLists.txt
@@ -1,5 +1,1 @@
-file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS
-  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
-)
-
-add_executable(program ${SRC_FILES})
+add_executable(program data/Sheet.cpp data/Sheet.h)
